// Generated by sylk.build, DO NOT EDIT.
syntax = "proto3";
package sylk.bookstore.book.v1;
option go_package = "github.com/sylk-build/sylk-examples/bookstore-go/services/protos/sylk/bookstore/book/v1;bookv1";

import "google/protobuf/empty.proto";

service BookStoreService {
	// [sylk.bookstore.book.v1.BookStoreService.ListBooks] - 
	rpc ListBooks (google.protobuf.Empty) returns (stream sylk.bookstore.book.v1.Book);
	// [sylk.bookstore.book.v1.BookStoreService.GetBook] - 
	rpc GetBook (sylk.bookstore.book.v1.GetBookRequest) returns (sylk.bookstore.book.v1.Book);
}


// [sylk.bookstore.book.v1.GetBookRequest] - 
message GetBookRequest {
	// [sylk.bookstore.book.v1.GetBookRequest.Name] - 
	string Name = 1;
}

// [sylk.bookstore.book.v1.Book] - The bookstore main entity "Book".
message Book {
	// [sylk.bookstore.book.v1.Book.name] - 
	string name = 1;
}